force-app/main/default/objects/eCard_Bus_OpChk__x/eCard_Bus_OpChk__x.object-meta.xml
<CustomObject>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_view_ecard$ecard_bus_opchk</externalName>
    <label>eCard_Bus_OpChk</label>
    <pluralLabel>eCard_Bus_OpChk</pluralLabel>
</CustomObject>