force-app/main/default/objects/eCard_Bus_OpChk__x/fields/bus_number__c.field-meta.xml
<CustomField>
    <fullName>bus_number__c</fullName>
    <description>bus_number</description>
    <externalDeveloperName>bus_number</externalDeveloperName>
    <label>bus_number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>