force-app/main/default/objects/eCard_Bus_OpChk__x/fields/buspropulsion_name__c.field-meta.xml
<CustomField>
    <fullName>buspropulsion_name__c</fullName>
    <description>buspropulsion_name</description>
    <externalDeveloperName>buspropulsion_name</externalDeveloperName>
    <label>buspropulsion_name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>