force-app/main/default/objects/eCard_Bus_OpChk__x/fields/coach_unladen_weight__c.field-meta.xml
<CustomField>
    <fullName>coach_unladen_weight__c</fullName>
    <description>coach_unladen_weight</description>
    <externalDeveloperName>coach_unladen_weight</externalDeveloperName>
    <label>coach_unladen_weight</label>
    <length>200</length>
    <type>Text</type>
</CustomField>