force-app/main/default/objects/eCard_Bus_OpChk__x/fields/is_required__c.field-meta.xml
<CustomField>
    <fullName>is_required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is_required</description>
    <externalDeveloperName>is_required</externalDeveloperName>
    <label>is_required</label>
    <type>Checkbox</type>
</CustomField>