force-app/main/default/objects/eCard_Bus_OpChk__x/fields/modified_date__c.field-meta.xml
<CustomField>
    <fullName>modified_date__c</fullName>
    <description>modified_date</description>
    <externalDeveloperName>modified_date</externalDeveloperName>
    <label>modified_date</label>
    <type>DateTime</type>
</CustomField>