force-app/main/default/objects/eCard_Bus_OpChk__x/fields/op_check_status__c.field-meta.xml
<CustomField>
    <fullName>op_check_status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>op_check_status</description>
    <externalDeveloperName>op_check_status</externalDeveloperName>
    <label>op_check_status</label>
    <type>Checkbox</type>
</CustomField>