force-app/main/default/objects/eCard_Bus_OpChk__x/fields/op_check_value__c.field-meta.xml
<CustomField>
    <fullName>op_check_value__c</fullName>
    <description>op_check_value</description>
    <externalDeveloperName>op_check_value</externalDeveloperName>
    <label>op_check_value</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>