force-app/main/default/objects/eCard_Bus_OpChk__x/fields/operation_check_description__c.field-meta.xml
<CustomField>
    <fullName>operation_check_description__c</fullName>
    <description>operation_check_description</description>
    <externalDeveloperName>operation_check_description</externalDeveloperName>
    <label>operation_check_description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>