force-app/main/default/objects/eCard_Bus_OpChk__x/fields/scheduled_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>scheduled_delivery_date__c</fullName>
    <description>scheduled_delivery_date</description>
    <externalDeveloperName>scheduled_delivery_date</externalDeveloperName>
    <label>scheduled_delivery_date</label>
    <type>Date</type>
</CustomField>