force-app/main/default/objects/eCard_Bus_OpChk__x/fields/sequence_order__c.field-meta.xml
<CustomField>
    <fullName>sequence_order__c</fullName>
    <description>sequence_order</description>
    <externalDeveloperName>sequence_order</externalDeveloperName>
    <label>sequence_order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>