force-app/main/default/objects/eCard_Bus_OpChk__x/fields/sf_name__c.field-meta.xml
<CustomField>
    <fullName>sf_name__c</fullName>
    <description>sf_name</description>
    <externalDeveloperName>sf_name</externalDeveloperName>
    <label>sf_name</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>