force-app/main/default/objects/eCard_Bus_OpChk__x/fields/transmission_type__c.field-meta.xml
<CustomField>
    <fullName>transmission_type__c</fullName>
    <description>transmission_type</description>
    <externalDeveloperName>transmission_type</externalDeveloperName>
    <label>transmission_type</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>