force-app/main/default/objects/eCard_Bus_OpChk__x/fields/value_required__c.field-meta.xml
<CustomField>
    <fullName>value_required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>value_required</description>
    <externalDeveloperName>value_required</externalDeveloperName>
    <label>value_required</label>
    <type>Checkbox</type>
</CustomField>